<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageView
        android:id="@+id/clotheImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:contentDescription="@string/cloth_image"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cloth1"
        app:layout_constraintDimensionRatio="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:contentDescription="@string/favorite"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/clotheImageView"
        app:layout_constraintEnd_toEndOf="@+id/clotheImageView" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:letterSpacing="0.5"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/clotheImageView"
        app:layout_constraintTop_toBottomOf="@+id/clotheImageView" />

    <TextView
        android:id="@+id/clotheNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/product_name"
        android:textColor="#555555"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="#DD8560"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clotheNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>